# wasm-wizard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs  final-publish.sh  package.json  publish-to-npm.sh  quick-github-release.sh
.github/workflows/: ci.yml  release.yml
examples/: getting-started.md
scripts/: install-binary.js
src/: composer.rs  main.rs  optimizer.rs  scaffolder.rs  utils.rs
src/commands/: add.rs  analyze.rs  bindings.rs  build.rs  check.rs  compose.rs  dev.rs  install.rs  mod.rs  new.rs  optimize.rs
templates/minimal/: build.sh  demo.html  wasm-wizard.toml
templates/rust/basic/: .gitignore  Cargo.toml  wasm-wizard.toml
templates/rust/basic/src/: lib.rs
templates/rust/basic/wit/: world.wit
templates/rust/crypto/: .gitignore  Cargo.toml  README.md  build.sh  demo.html  wasm-wizard.toml
templates/rust/crypto/src/: lib.rs
templates/rust/crypto/wit/: world.wit
tests/: integration_test.rs
