[package]
name = "{{name}}"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.15"

[dependencies.wit-bindgen]
version = "0.15"
default-features = false
features = ["macros"]

[package.metadata.component]
package = "{{name}}:component"

[package.metadata.component.dependencies]